Time: 13 ms (16.55%), Space: 47.8 MB (12.31%) - LeetHub